--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^8.2.0
   json_annotation: ^4.9.0
   logger: ^2.6.2
+  persistent_bottom_nav_bar: ^6.2.1
   pinput: ^5.0.0
   pretty_dio_logger: ^1.4.0
   retrofit: ^4.7.3
